# linkedin-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: common_poetry.md
tests/: test_selenium_chromedriver.py
