[tool.poetry]
name = "linkedin-scraper"
version = "0.1.0"
description = "various scripts to scrape linkedin web contents"
authors = ["Dendi Handian <contact.dendi@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
